Add Hex Chess rule support and clean warnings